--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ doctype <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer repo</title>
+    <title>Primer repo, para ver que logré configurar mi github y mi terminal</title>
 </head>
 <body>
     <p>Hola Mundo</p>
