Cambio de título y primer cambio al texto desde otro equipo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ doctype <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aquí volví a hacer un merge con la ultima configuración que practiqué</title>
+    <title>Esto es sólo un título</title>
 </head>
 <body>
-    <p>Hola Mundo</p>
+    <p>Hola Mundo, ahora si estoy clonando y haciendo cambios desde otro equipo al mísmo proyecto</p>
 </body>
 </html>
